--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@tinymce/tinymce-react": "^5.0.1",
     "appwrite": "^14.0.1",
     "html-react-parser": "^5.1.10",
+    "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-typed": "^2.0.12",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
